# searchstack-aeo

./: .gitignore  LICENSE  README.md  llms.txt  pyproject.toml
demo/: demo.py  demo.tape  facebook-post-ru.md  record.tape  x-thread-en.md
docs/: AEO-GEO-EXPLAINED.md  DETAILED-REFERENCE.md  SERVICES.md
src/searchstack/: cli.py  config.py  snapshots.py
src/searchstack/commands/: ai.py  audit.py  backlinks.py  bing_cmd.py  bulk.py  competitors.py  gaps.py  geo.py  gsc_cmd.py  indexnow.py  keywords.py  links.py  llms.py  meta.py  monitor.py  onpage.py  pages.py  report.py  schema.py  serp.py  track.py  traffic.py
src/searchstack/providers/: anthropic_client.py  bing.py  dataforseo.py  google_ads.py  grok.py  gsc.py  ollama.py  openai_client.py  perplexity.py  plausible.py
